5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1646_87.log
== TEST (2019-05-01 16:22:48) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:30:08) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print a
elif b> a and c:
    print b
elif c> a and b:
    print c
-- ERROR:
File "XXXX", line 5
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:30:41) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
elif b> a and c:
    print(b)
elif c> a and b:
    print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:31:25) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
elif b<a and c:
    print(b)
elif c<a and b:
    print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:31:36) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
elif b<a and c:
    print(b)
elif c<a and b:
    print(c)
-- EXECUTION TIME:
0.164469
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:33:37) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
if b<a and c:
    print(b)
else c<a and b:
    print(c)
-- ERROR:
File "XXXX", line 8
    else c<a and b:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:33:49) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
if b<a and c:
    print(b)
if c<a and b:
    print(c)
-- OUTPUT:
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:34:04) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if a < b and c:
    print(a)
if b<a and c:
    print(b)
if c<a and b:
    print(c)
-- EXECUTION TIME:
0.183668
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:34:38) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
if (b<a and c):
    print(b)
if (c<a and b):
    print(c)
-- OUTPUT:
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:34:55) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
if (b<a and c):
    print(b)
if (c<a and b):
    print(c)
-- OUTPUT:
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:34:58) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
if (b<a and c):
    print(b)
if (c<a and b):
    print(c)
-- EXECUTION TIME:
0.140006
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:39:11) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
if (b<a and c):
    print(b)
if (c<a and b):
    print(c)
-- OUTPUT:
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:39:39) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
if (b<a and c):
    print(b)
if (c<a and b):
    print(c)
-- OUTPUT:
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:40:37) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
elif (b<a and c):
    print(b)
elif (c<a and b):
    print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:40:48) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
elif (b<a and c):
    print(b)
elif (c<a and b):
    print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:41:02) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b and c):
    print(a)
elif (b<a and c):
    print(b)
elif (c<a and b):
    print(c)
-- EXECUTION TIME:
0.286779
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:41:54) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
elif (b<a < c):
    print(b)
elif (c<a < b):
    print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:42:09) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
elif (b<a < c):
    print(b)
elif (c<a < b):
    print(c)
-- EXECUTION TIME:
0.153168
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:42:22) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
if (b<a < c):
    print(b)
if (c<a < b):
    print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:42:32) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
if (b<a < c):
    print(b)
if (c<a < b):
    print(c)
-- EXECUTION TIME:
0.160574
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:42:38) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
if (b<a < c):
    print(b)
if (c<a < b):
    print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:42:49) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:42:59) 
-- CODE:
a = int(input(""))
b = int(input(""))
c= int(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- EXECUTION TIME:
0.161008
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:43:24) 
-- CODE:
a = int(input(""))
b = int(input(""))
c = int(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:43:27) 
-- CODE:
a = int(input(""))
b = int(input(""))
c = int(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- EXECUTION TIME:
0.158823
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:46:05) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- OUTPUT:
35.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:46:15) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
if (a < b < c):
    print(a)
if (b <a < c):
    print(b)
if (c <a < b):
    print(c)
-- EXECUTION TIME:
0.191066
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:

-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
